# generic-ds

./: .gitignore  Makefile  Makefile.am  Makefile.bak  configure.ac  deque.h  node.h  queue.h  stack.h  todo.md
bst/: bst.h  bst_node.h
include/: bst.h  chash.h  deque.h  heap.h  heap_m.h  list.h  new-test.c  ohash.h  queue.h  rb.h  rbtree-macro.h  rbtree.h  slist.h  stack.h  vector.h
include/bst/: bst.h
include/ds/: deque.h  generator.h  list.h  pair.h  vec.h  vector.h
include/lgg/: bst.h  chash.h  deque.h  ds.h  heap.h  list.h  pair.h  pqueue.h  rb.h  vector.h
include/lggds/: chash.h  ds2.h  list.h  pair.h  rb.h  vector.h  vector2.h
include/list/: list.h  node.h
include/new/: bst.h  chash.h  deque.h  list.h  ohash.h  pair.h  pqueue.h  rb.h  vector.h
include/new/algorithms/: heap.h
include/new/algorithms/sort/: heapsort.h
include/red-black-tree/: node.h  rbtree.h  tree.h
list/: list.h
red-black-tree/: bst.h  rbtree.h
src/: main.c
test/: bst.c  chash.c  deque.c  heap.c  heap_m.c  list.c  namespace.c  ohash.c  queue.c  rb.c  rbtree.c  slist.c  stack.c  test_lib.h  vector.c
tools/: namespace.py  quiet.py
